--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,65 +1,52 @@
 {
-    "projects": [
-        {
-            "id": 1,
-            "image": "images/project_0.jpg",
-            "category": "Cleint Project",
-            "title": "Noor and Brothers Ltd.",
-            "tags": ["Bootstrap", "Laravel", "Vue", "Inertia.js"],
-            "description": "<p>It's a work flow management software (sales, purchase, raw material stock, multilevel product stock, manufacturing management, customer/supplier management, employee management, accounting etc) for a coal tar manufacturing company in Bangladesh. I worked heavily in this project in my job at Haste IT. I was also involved in user requirement analysis and training on how to use the software."
-        },
-        {
-            "id": 2,
-            "image": "images/project_1.jpg",
-            "category": "Open Source",
-            "title": "Triangle POS & Inventory",
-            "tags": ["Bootstrap", "Laravel", "Livewire"],
-            "code_link": "https://github.com/FahimAnzamDip/triangle-pos",
-            "description": "<p>Triangle POS is an open source Inventory Management with POS System. Developed with Laravel 10, Bootstrap 4 & Livewire 2.0.</p>"
-        },
-        {
-            "id": 3,
-            "image": "images/project_2.jpg",
-            "category": "Client Project",
-            "title": "Kutub Shop",
-            "tags": ["Tailwind CSS", "Alpine.js", "Laravel", "Livewire"],
-            "live_link": "https://kutubshop.com",
-            "description": "<p><a href=\"https://www.facebook.com/kutubshopbd\" target=\"_blank\">Kutub Shop</a> is an ecommerce website focused on selling books. I worked on both frontend and backend in this project for one of my client (<a href=\"https://triangletech.com.bd\" target=\"_blank\">Triangle Technologies Ltd.</a>) and it was built with TALL stack in the frontend and backend in Laravel 8.</p>"
-        },
-        {
-            "id": 4,
-            "image": "images/project_3.jpg",
-            "category": "Client Project",
-            "title": "Canbe BD",
-            "tags": ["Bootstrap", "Laravel", "Livewire"],
-            "live_link": "http://canbebd.com",
-            "description": "<p>It's a company profile with ecommerce website for a well known medical instrument distributor in Bangladesh. It was one my project based work for a client built with Laravel 8, Bootstrap & Livewire.</p>"
-        },
-        {
-            "id": 5,
-            "image": "images/project_4.jpg",
-            "category": "Job/Office Project",
-            "title": "Jamia Kashiful Uloom",
-            "tags": ["Bootstrap", "Laravel", "Jquery", "Ajax", "Livewire"],
-            "live_link": "https://kashifululoombd.com",
-            "description": "<p>It's a madrasa management system (student management, hostel management, admission management, employee management etc) with frontend cms for a well known <a href=\"https://www.facebook.com/syedanuwarabullah\" target=\"_blank\">madrasa</a> in Bangladesh. I worked actively in this project for both frontend and backend in my job at Haste IT.</p>"
-        },
-        {
-            "id": 6,
-            "image": "images/project_5.jpg",
-            "category": "Job/Office Project",
-            "title": "Almodina Battery House",
-            "tags": ["Bootstrap", "Laravel", "Livewire", "Jquery"],
-            "description": "<p>It's a work flow management software (sales, purchase, raw material stock, vehicle stock, customer/supplier management, employee management, basic accounting etc) for a auto manufacturing company in Bangladesh. I worked heavily in this project in my job at Haste IT. I was also involved in user requirement analysis and training on how to use the software.</p>"
-        },
-        {
-            "id": 7,
-            "image": "images/project_6.jpg",
-            "category": "Client Project",
-            "title": "Ihyaussunnah Foundation",
-            "tags": ["Bootstrap", "Jquery", "Laravel", "Livewire"],
-            "live_link": "https://ihyaussunnah.com",
-            "description": "<p>It's a website for welfare foundation in Bangladesh called <a href=\"https://www.facebook.com/ihyaussunnahbd\" target=\"_blank\">Ihyaussunnah Foundation</a>. It also has a separate ecommerce module for selling books. The project was from my my client (<a href=\"https://triangletech.com.bd\" target=\"_blank\">Triangle Technologies Ltd.</a>) and the backend is built with Laravel 10.</p>"
-        }
-    ]
+  "projects": [
+    {
+      "id": 1,
+      "image": "images/SiMarKu - Portfolio.png",
+      "category": "Final Project",
+      "title": "Sistem Informasi Penggemar Buku (SiMarKu)",
+      "tags": ["Figma", "Flutter", "Firebase", "GetX"],
+      "code_link": "https://github.com/sefryss/simarku-app",
+      "description": "<p>It's a book fan application where later in the application users can exchange borrow books, exchange books, donate books, and there is a message feature to facilitate communication between users.</p>"
+    },
+    {
+      "id": 2,
+      "image": "images/POS - Portfolio.png",
+      "category": "Online Course",
+      "title": "Point of Sale (POS) App",
+      "tags": [
+        "Figma",
+        "Laravel",
+        "PHP",
+        "Flutter",
+        "Dart",
+        "BLoC",
+        "MySQL",
+        "Midtrans",
+        "QRIS Payment"
+      ],
+      "code_link": "https://github.com/sefryss/angkringan-kongjw-app",
+      "description": "<p>Develop Point of Sale (POS) application that is integrated with midtrans payment gateway and also can connect with bluetooth printers. Available in the form of application developed with flutter and also website for admin developed using Laravel.</p>"
+    },
+    {
+      "id": 3,
+      "image": "images/Food Delivery Order - Portfolio.png",
+      "category": "Online Course",
+      "title": "Food Delivery Order App",
+      "tags": [
+        "Figma",
+        "Laravel",
+        "PHP",
+        "Flutter",
+        "Dart",
+        "BLoC",
+        "MySQL",
+        "Xendit",
+        "Maps API",
+        "Firebase"
+      ],
+      "code_link": "https://github.com/sefryss/food_delivery_app",
+      "description": "<p>Develop Food Delivery Order App that consists of three applications, an application for users, an application for drivers, and an application for restaurants.</p>"
+    }
+  ]
 }
